--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -23,6 +25,35 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.SearchBar {
+  display: flex;
+  flex-direction: column;
+}
+
+.checkbox {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+table {
+  width: 100%;
+  margin-top: 50px;
+}
+
+table,
+td {
+  border: 1px solid green;
+}
+thead,
+tfoot {
+  border: red;
 }
